# sysAgent

./: .gitignore  INSTALL.md  INSTALLATION.md  QUICKSTART.md  README.md  pyproject.toml  setup.py  system_analysis.txt  system_info.txt
src/sysagent/: __init__.py  types.py
src/sysagent/api/: __init__.py  server.py
src/sysagent/cli/: __init__.py  langgraph_commands.py  main.py
src/sysagent/core/: __init__.py  activity_tracker.py  agent.py  agent_modes.py  config.py  context_awareness.py  deep_agent.py  human_loop.py  langgraph_agent.py  logging.py  memory.py  middleware.py  permissions.py  plugins.py  proactive_monitor.py  session_manager.py  smart_clipboard.py  smart_learning.py  task_templates.py
src/sysagent/gui/: __init__.py  activity_dashboard.py  activity_timeline.py  chat.py  command_palette.py  components.py  dashboard.py  floating_widget.py  main_window.py  notification_center.py  onboarding.py  proactive_agent.py  settings.py  system_tray.py
src/sysagent/tools/: __init__.py  api_tool.py  app_tool.py  auth_tool.py  automation_tool.py  base.py  browser_tool.py  clipboard_tool.py  code_generation_tool.py  context_memory_tool.py  document_tool.py  email_tool.py  file_tool.py  git_tool.py  keyboard_mouse_tool.py  low_level_os_tool.py  macro_tool.py  media_tool.py  monitoring_tool.py  network_tool.py  notification_tool.py  ocr_tool.py  os_intelligence_tool.py  package_manager_tool.py  process_tool.py  scheduler_tool.py  screen_recorder_tool.py  screenshot_tool.py  security_tool.py  service_tool.py  smart_search_tool.py  spreadsheet_tool.py  system_control_tool.py  system_info_tool.py  system_insights_tool.py  voice_tool.py  window_tool.py  workflow_tool.py
src/sysagent/utils/: __init__.py  platform.py
tests/: test_basic.py  test_config.py
