[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysagent-cli"
version = "0.1.0"
description = "Secure, intelligent command-line assistant for OS automation and control"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SysAgent Team", email = "team@sysagent.dev"}
]
keywords = ["cli", "automation", "llm", "system", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "platformdirs>=3.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
gui = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
]
tray = [
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    "pynput>=1.7.6",
]
vision = [
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
]
voice = [
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11",
]
office = [
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
]
full = [
    "sysagent-cli[dev,gui,vision,voice,office,tray]"
]

[project.scripts]
sysagent = "sysagent.cli.main:main"

[project.urls]
Homepage = "https://github.com/sysagent/sysagent-cli"
Documentation = "https://sysagent-cli.readthedocs.io"
Repository = "https://github.com/sysagent/sysagent-cli"
"Bug Tracker" = "https://github.com/sysagent/sysagent-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sysagent"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["sysagent"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=sysagent",
    "--cov-report=term-missing",
    "--cov-report=html",
] 